--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+@import url(./assets/css/utilities.css);
+@import url(./assets/css/gap.css);
+@import url(./assets/css/padding.css);
+
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
