--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+@import url(./assets/css/utilities.css);
+@import url(./assets/css/gap.css);
+@import url(./assets/css/padding.css);
+
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -18,6 +23,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -42,26 +48,25 @@ h1 {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
 
 .card {
   padding: 2em;
 }
 
-.read-the-docs {
-  color: #888;
+.product-card{
+  border: 1px solid rgba(255, 255, 255, 0.514);
+  padding: 1rem;
+  border-radius: 1rem;
+  width: 400px;
+  & h3{
+    text-align: center;
+  }
+  & img{
+    width: 100px;
+    height: 100px;
+  }
 }
+
 
 button {
   border-radius: 8px;
@@ -74,23 +79,12 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
